--- a/main.html
+++ b/main.html
@@ -11,6 +11,47 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<header">
+		<nav>
+			<ul>
+				InterSteller
+				<a id="nav-actor" href="#actor">Actors</a>
+				<a id="nav-quote" href="#quote">Quotes</a>
+			</ul>
+		</nav>
+	</header>
+
+	<p>Interstellar is a 2014 epic science fiction film co-written, directed, and produced by Christopher Nolan. It stars Matthew McConaughey, Anne Hathaway, Jessica Chastain, Bill Irwin, Ellen Burstyn, Matt Damon, and Michael Caine. Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for mankind.</p>
+	
+	<section id="actor">
+		<ul>
+			<li>Matthew McConaughey as Joseph Cooper,[a] a widowed NASA pilot who, after the agency was closed by the government, had become a farmer</li>
+			<li>Anne Hathaway as Dr. Amelia Brand, a NASA scientist, and astronaut</li>
+			<li>Jessica Chastain as Murphy "Murph" Cooper, Joseph's daughter, who eventually becomes a NASA scientist</li>
+			<li>Mackenzie Foy as young Murph</li>
+			<li>Ellen Burstyn as elderly Murph</li>
+			<li>John Lithgow as Donald, Cooper's elderly father-in-law</li>
+			<li>Michael Caine as Professor John Brand, a high-ranking NASA scientist, ideator of Plan A, former mentor of Cooper, and father of Amelia</li>
+			<li>David Gyasi as Romilly, another high-ranking NASA member, and Endurance crew member</li>
+		</ul>
+	</section>
+	<section id="quote">
+		<p>Nolan shot Interstellar on 35 mm film in the Panavision anamorphic format and IMAX 70 mm photography.[30] Cinematographer Hoyte van Hoytema was hired for Interstellar, as Wally Pfister, Nolan's cinematographer on all of his previous films, was making his directorial debut working on Transcendence (2014).[31] More IMAX cameras were used for Interstellar than for any of Nolan's previous films. To minimize the use of computer-generated imagery (CGI), the director had practical locations built, such as the interior of a space shuttle.[25] Van Hoytema retooled an IMAX camera to be hand-held for shooting interior scenes.[7] Some of the film's sequences were shot with an IMAX camera installed in the nose cone of a Learjet.[32]</p>
+	</section>
+
+	<aside>
+		<p>Imdb Rating: 8.6</p>
+			
+		<pre>
+release Dates:     October 26, 2014 (TCL Chinese Theatre)
+		   November 5, 2014 (United States)
+		   November 7, 2014 (United Kingdom)
+		</pre>
+	</aside>
+
+	<footer>
+		<h3>Produced by: &lt Christopher Nolan &gt</h3>
+	</footer>
 </body>
 
 </html>
