--- a/main.html
+++ b/main.html
@@ -11,17 +11,19 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<header">
+	<header>
+		InterSteller
 		<nav>
 			<ul>
-				InterSteller
 				<a id="nav-actor" href="#actor">Actors</a>
+			</ul>
+			<ul>
 				<a id="nav-quote" href="#quote">Quotes</a>
 			</ul>
 		</nav>
 	</header>
 
-	<p>Interstellar is a 2014 epic science fiction film co-written, directed, and produced by Christopher Nolan. It stars Matthew McConaughey, Anne Hathaway, Jessica Chastain, Bill Irwin, Ellen Burstyn, Matt Damon, and Michael Caine. Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for mankind.</p>
+	<summary>Interstellar is a 2014 epic science fiction film co-written, directed, and produced by Christopher Nolan. It stars Matthew McConaughey, Anne Hathaway, Jessica Chastain, Bill Irwin, Ellen Burstyn, Matt Damon, and Michael Caine. Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for mankind.</summary>
 	
 	<section id="actor">
 		<ul>
